# fmusic

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Vagrantfile  build.sh
app/: App.cpp  App.h  AppLog.cpp  AppLog.h  CMakeLists.txt  Log.cpp  Log.h  LogWindow.cpp  LogWindow.h  PlayerWindow.cpp  PlayerWindow.h  Settings.h  SettingsWindow.cpp  SettingsWindow.h  SyntaxHighlight.cpp  SyntaxHighlight.h  VisualiserCanvas.cpp  VisualiserCanvas.h  VisualiserWindow.cpp  VisualiserWindow.h  main.cpp
app/share/: evomu.qrc
cli/: CMakeLists.txt  main.cpp
examples/: ambient.fmu  ascending.fmu  markov.fmu  rand.fmu  song1.emu
lib/: CMakeLists.txt  Instrument.h  Log.h  MIDI.cpp  MIDI.h  Message.h  Player.cpp  Player.h  Song.cpp  Song.h
lib/cmake/: FindLuaJIT.cmake  FindRtMidi.cmake
lib/lua/: Logger.cpp  Logger.h  MIDI.cpp  MIDI.h  MIDIFile.cpp  MIDIFile.h
scripts/: build.sh  deps-osx.sh  deps-ubuntu.sh  deps.sh
share/: evomu.qrc  fMusic.icns
test/: ambient.emu  ascending.emu
tests/: CMakeLists.txt  Test.cpp  Test.h  TestPlayer.cpp  TestSong.cpp
